# Multi-threaded-Downloader

./: CMakeLists.txt  README.md
include/downloader/: download_manager.hpp  download_task.hpp  multi_downloader.hpp  progress.hpp
include/downloader/detail/: curl_utils.hpp
src/: download_manager.cpp  main.cpp  multi_downloader.cpp
src/detail/: curl_utils.cpp
